prevent link break in span

--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -241,6 +241,10 @@ body {
 
 .pub-abstract {
     padding-bottom: 1rem;
+
+    span {
+        white-space: nowrap;
+    }
 }
 
 .pub-bibtex {
